--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test
 python_functions = test_*
+addopts = -v
+;addopts = --cov=polyllm --cov-report=annotate --cov-report=html --cov-report=term-missing
