--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test
 python_functions = test_*
+filterwarnings = error
 addopts = -v
 ;addopts = --cov=polyllm --cov-report=annotate --cov-report=html --cov-report=term-missing
