Added experimental support for grammars with MLX

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,8 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test
 python_functions = test_*
-filterwarnings = error
+filterwarnings =
+    error
+    ignore::Warning
 addopts = -v
 ;addopts = --cov=polyllm --cov-report=annotate --cov-report=html --cov-report=term-missing
